# ToFu

./: .coverage  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  README_CN.md  bootstrap.py  docker-compose.yml  fix_openreview_latex.py  healthcheck.py  index.html  install.ps1  install.py  install.sh  pyproject.toml  requirements.txt  ruff.toml  server.py  split_long_image.py  thesis_references.bib  trading.html
browser_extension/: background.js  manifest.json  popup.html  popup.js
cards_output/: card_01.html  card_02.html  card_03.html  card_04.html  card_05.html  card_06.html  card_07.html  card_08.html  card_09.html  card_10.html  card_11.html  card_12.html
debug/: CACHE_BP4_AB_REPORT.md  ask.py  bench_c128.py  bench_c128_report.md  bench_grep_vs_rg.py  bench_quick.py  bench_sglang_128.py  bench_swarm_vs_single.py  bench_thinking_throughput.py  benchmark_all_models.py  benchmark_model.py  benchmark_new_models.py  benchmark_new_models_full.py  benchmark_tofu_vs_cc.py  cache_validation_20260404_220828.json  cache_validation_20260404_225233.json  cache_validation_20260404_225554.json  cache_validation_20260404_230741.json  cache_validation_20260405_050317.json  cache_validation_20260405_052656.json  cache_validation_20260410_182556.json  cache_validation_20260410_182920.json  cache_validation_20260410_183539.json  demo_browser_advanced.py  filter_results.json  key1_triggers_result.json  nonclaude_cache_probe_20260503_131106.json  nonclaude_cache_probe_20260503_131618.json  paired_compact_ab_20260427_072009.json  paired_compact_live_20260427_074336.json  paired_compact_live_20260427_074934.json  paired_compact_live_20260427_075349.json  phase_d_ab_20260426_232940.json  phase_d_ab_20260426_232953.json  phase_d_ab_20260426_233019.json  (+69 more)
lib/: compat.py  (+34 more)
(+401 files in other folders)
